change jpg to jpeg

--- a/app/pug/data.pug
+++ b/app/pug/data.pug
@@ -7,32 +7,32 @@
                 last_name: "Хекслетович",
                 about:
                         "Милый и скромный помощник начинающих разработчиков. Люблю JavaScript",
-                avatar: "avatar_1.jpg",
+                avatar: "avatar_1.jpeg",
             },
             user2: {
                 first_name: "Джедай",
                 last_name: "Падаванов",
-                avatar: "avatar_2.jpg",
+                avatar: "avatar_2.jpeg",
             },
             user3: {
                 first_name: "Алексей",
                 last_name: "Примадонин",
-                avatar: "avatar_3.jpg",
+                avatar: "avatar_3.jpeg",
             },
             user4: {
                 first_name: "Вениамин",
                 last_name: "Редакторович",
-                avatar: "avatar_4.jpg",
+                avatar: "avatar_4.jpeg",
             },
             user5: {
                 first_name: "Королева",
                 last_name: "Верстальщина",
-                avatar: "avatar_5.jpg",
+                avatar: "avatar_5.jpeg",
             },
             user6: {
                 first_name: "Питонист",
                 last_name: "Джангович",
-                avatar: "avatar_6.jpg",
+                avatar: "avatar_6.jpeg",
             },
         };
 -
