--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,11 +1,114 @@
-@import "variables";
-@import 'node_modules/bootstrap/scss/bootstrap';
-@import "utilities/gap";
-@import "general";
-@import "mixin";
-@import "utilities/float.scss";
-@import "utilities/radius.scss";
-@import "utilities/color.scss";
+@import 'mixins/hide-scrollbar.scss';
 
+.container-xxl {
+  background: white;
+}
 
+.icon {
+  width: 25px;
+  height: 25px;
+}
 
+.logo {
+  width: 15px;
+  height: 25px;
+  fill: $light;
+}
+
+.avatar {
+  width: 200px;
+  height: 200px;
+}
+
+.cursor {
+  width: 24px;
+  height: 24px;
+}
+
+.avatar-sm {
+  width: 50px;
+  height: 50px;
+}
+
+.avatar-md {
+  width: 90px;
+  height: 90px;
+}
+
+.btn {
+  width: 50px;
+  height: 50px;
+}
+
+.card-component .contact {
+  &:hover {
+    cursor: pointer;
+    background: $primary;
+    color: $light;
+  }
+
+  &:hover .status {
+    color: $gray;
+  }
+}
+
+.incoming-message {
+  background-color: $light;
+}
+
+.incoming-message small,
+.incoming-message .msg,
+{
+  color: $secondary;
+}
+
+.outgoing-message small {
+  color: $gray;
+}
+
+.outgoing-message .msg {
+  color: $light;
+}
+
+.status {
+  color: $secondary;
+}
+
+p:empty {
+  display: none;
+}
+
+.message {
+  min-width: 0;
+}
+
+.footer {
+  min-width: 0;
+}
+
+.chat {
+  @include hide-scrollbar;
+}
+
+.chat-message {
+  width: 75%
+}
+
+@include media-breakpoint-down(sm) {
+  .navbar {
+    order: 2;
+  }
+  .chat-message {
+    width: 100%;
+    align-self: center !important;
+  }
+
+  .btn {
+    width: 42px;
+    height: 42px;
+  }
+
+  .btn svg {
+    min-width: 24px;
+  }
+}
